--- a/style.css
+++ b/style.css
@@ -2552,6 +2552,11 @@ svg#gold-gradient-defs {
   }
 }
 
+/* Overstyr global section-padding for hero-slider */
+section.hero-slider {
+  padding: 0;
+  margin: 0;
+}
 
 
 /* Gullbadge for luxury brands */
@@ -3341,6 +3346,7 @@ section {
   fill: #ff2953;
   stroke: #ff2953;
 }
+
 
 
 
